--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "next": "15.1.2",
     "photoswipe": "^5.4.4",
     "rc-slider": "^11.1.8",
-    "react": "^19.0.0",
+    "react": "18.2.0",
     "react-compare-slider": "^3.1.0",
     "react-countdown": "^2.3.6",
-    "react-dom": "^19.0.0",
+    "react-dom": "18.2.0",
     "react-image-zoom": "^1.3.1",
     "react-photoswipe-gallery": "^3.0.2",
     "sass": "^1.77.8",
     "swiper": "^11.1.11"
   },
   "devDependencies": {
-    "@types/react": "^18.3.11"
+    "@types/react": "18.2.79"
   }
 }
+
